<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_DS402_CSP_Config" Id="{f0920dfb-66da-09df-2181-42a4491a31ab}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '0'}
TYPE ST_DS402_CSP_Config :
STRUCT	
	bForceMode			: BOOL; //Ignore process data from fieldbus.	
	bSwapProcessData	: BOOL; //Reverse process data byte order from/to fieldbus.
	fPositionOffset		: LREAL := 0.0;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>